--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@datastructures-js/queue": "^4.2.3",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
     "socket.io": "^4.6.1",
